1. Added tooltips to gene searches (Alisha suggestion) 2. Save files now contain ensembl name in output (Alisha suggestion) 3. Removed log2ratio warnings in Chip data (TP suggestion) 4. Query select all results now selects all results vs visible results. 5. Added global Query help to 'Help' navbar 6. Added individualized helps to each section of the query page 7. Users can now stop gene/region uploads 8. Replaced the loading bar style animation with a spinning cicle animation, which can also disable elements.  People seemed annoyed that the progress bar did not reflect real progress. I'll probably replace all instances of loading bar animation as I go through this round of improvements/bug fixes.
git-svn-id: svn://svn.code.sf.net/p/biominerqt/code-0/trunk@196 86439291-5e3c-406c-9808-073398cf6135

--- a/src/main/webapp/resources/css/biominer.css
+++ b/src/main/webapp/resources/css/biominer.css
@@ -58,6 +58,23 @@ input::-webkit-inner-spin-button {
 	overflow-y: auto;
 }
 
+.modal-body {
+	overflow-y: auto;
+}
+
+.modal-body.text-info > h3 {
+	color: red;
+}
+
+.modal-body.text-info > h1 {
+	color: black;
+}
+
+.modal-body.text-info > h4 {
+	font-style: italic;
+	color: black;
+}
+
 .navbar-fixed-top {
     height: 55px;
 }
@@ -284,6 +301,14 @@ h6,
 .list-group {
 	margin-bottom: 5px;
 }
+
+.help-button {
+	font-size:16px; 
+	color: CornflowerBlue;
+	cursor:pointer;
+}
+
+
 
 .radio-top {
 	vertical-align: top;
@@ -541,4 +566,9 @@ body {
 /*  	width: 125%; */
 /*  	height: 125%; */
 /* } */
+
+
+
+
+
 
